--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "dependencies": {
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
+    "ioredis": "^5.6.1",
     "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "@types/ioredis": "^4.28.10",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.17",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
