feat: add range in stream

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       - 3333:3333
     volumes:
       - ./videos:/app/videos
-    env_file:
-      - .env
+    environment:
+      - REDIS_HOST=redis
     depends_on:
       - redis
   
